--- a/views/add/addProd.handlebars
+++ b/views/add/addProd.handlebars
@@ -128,7 +128,7 @@
                     <!-- horizontal form -->
                     <!-- ============================================================== -->
                     <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
-                        <form action="" method="post">
+                        <form action="/addProd/addAperitivo" method="post">
                             <div class="card">
                                 <h5 class="card-header">Cadastro do Produto Aperitivo</h5>
                                 <div class="card-body">
@@ -136,7 +136,7 @@
                                         <div class="form-group">
                                             <label for="codAperitivo">Código do Aperitivo</label>
                                             <input type="text" name="codAperitivo" id="codAperitivo"
-                                                class="form-control" placeholder="Digite o nome do Aperitivo">
+                                                class="form-control" placeholder="Digite o código do Aperitivo">
                                         </div>
                                         <div class="form-group">
                                             <label for="nomeAperitivo">Nome do Aperitivo</label>
@@ -148,14 +148,12 @@
                                             <textarea name="descAperitivo" id="descAperitivo" cols="30" rows="10"
                                                 class="form-control"
                                                 placeholder="Digite a descrição deste aperitivo"></textarea>
-                                        </div>
+                                        </div>  
                                         <div class="form-group">
-                                            <label for="gastoAperitivo">Definir Gasto de Material neste
-                                                Aperitivo</label>
-                                            <textarea name="gastoAperitivo" id="gastoAperitivo" cols="30" rows="10"
-                                                class="form-control"
-                                                placeholder="Digite o nome do Aperitivo"></textarea>
-                                        </div>
+                                            <label for="valorAperitivo">Valor</label>
+                                            <input type="text" name="valorAperitivo" id="valorAperitivo"
+                                                class="form-control" placeholder="Digite o valor do Aperitivo">
+                                        </div>                                      
                                         <hr>
                                         <div class="row pt-2 pt-sm-5 mt-1">
                                             <div class="col-sm-6 pb-2 pb-sm-4 pb-lg-0 pr-0">
