--- a/views/partials/_sidebarDashboard.handlebars
+++ b/views/partials/_sidebarDashboard.handlebars
@@ -63,7 +63,7 @@
                                 <div id="submenu-2" class="collapse submenu" style="">
                                     <ul class="nav flex-column">
                                          <li class="nav-item">
-                                            <a class="nav-link" href="/montarpedido">Montar Pedido</a>
+                                            <a class="nav-link" href="/pedido">Montar Pedido</a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link" href="pages/carousel.html">Status Pedidos</a>
